correction de l'affichage de la carte sur la version mobile

--- a/src/Afup/BarometreBundle/Resources/assets/sass/_map.scss
+++ b/src/Afup/BarometreBundle/Resources/assets/sass/_map.scss
@@ -5,8 +5,8 @@
   width: 100%;
 
   svg {
-    height: 500px;
-    width: 500px;
+    height: auto;
+    max-width: 500px;
   }
 }
 
